--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ dependencies = [
     "protobuf>=4.25.3",
 ]
 
+[project.urls]
+Homepage = "https://github.com/XFY9326/XiaomiNDEF"
+Repository = "https://github.com/XFY9326/XiaomiNDEF.git"
+"Bug Tracker" = "https://github.com/XFY9326/XiaomiNDEF/issues"
+
 [tool.pytest.ini_options]
 pythonpath = "src"
 
