--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,16 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
           pip install pytest hatch versioningit
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Build protobuf
+        run: |
+          python ./build_protobuf.py
       - name: Build dist
         run: |
           hatch build
