--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,11 +19,16 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install pytest pytest-cov
+          pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Build protobuf
+        run: |
+          python ./build_protobuf.py
       - name: Test with pytest
         run: |
-          pytest --cov=src ./tests/
+          pytest ./tests/
